@@ -1,6 +1,7 @@
 /* aide, Advanced Intrusion Detection Environment
  *
- * Copyright (C) 2002 Rami Lehti, Pablo Virolainen
+ * Copyright (C) 2002,2006 Rami Lehti, Pablo Virolainen, Richard van den
+ * Berg
  * $Header$
  *
  * This program is free software; you can redistribute it and/or
