@@ -2,6 +2,8 @@
 	* Updated copyright notices of list.h, list.c, md.h, md,c, symboltable.h,
 	  symboltable.c, util.h and util.c
 	* Escaped '-' that really mean '-' in man pages
+	* Updated copyright notices of db_config.h, report.h, url.h, conf_yacc.y,
+	  db_lex.l and error.c
 
 2010-08-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Updated copyright notices of db_file.h, db_file.c, db_sql.h, db_sql.c,
